--- a/_posts/2020-01-02-post1.markdown
+++ b/_posts/2020-01-02-post1.markdown
@@ -5,7 +5,7 @@ date: 2024-07-02 14:04:23 +0900
 category: sample
 ---
 # post-sample
-> 쿠팡 코멧 홈 3단 수납 선반, 화이트 후기 입니다.
-> https://www.coupang.com/vp/products/5735886487?vendorItemId=76923739622&sourceType=MyCoupang_my_orders_list_product_title&isAddedCart=
+> 쿠팡 코멧 홈 3단 수납 선반, 화이트 후기 입니다. <br>
+<a href="https://link.coupang.com/a/bHYn2F" target="_blank" referrerpolicy="unsafe-url"><img src="https://image1.coupangcdn.com/image/affiliate/banner/c378b2fe876e8299e1d5083b2e097f40@2x.jpg" alt="코멧 홈 3단 수납 선반, 화이트, 1개" width="120" height="240"></a>
 
 * 쿠팡 파트너스 활동을 통해 일정액의 수수료를 제공받을 수 있습니다.
